<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Avalon</string>
    <string name="setup_title">Game Setup</string>

    <string name="disconnect_menu">Disconnect</string>

    <string name="role_prompter">Select your role</string>
    <string name="server">Server</string>
    <string name="client">Client</string>

    <string name="start_game">Start Game</string>
    <string name="role_label">You are: </string>
    <string name="seen_players_label">You see: </string>

    <string name="assassin">Assassin</string>
    <string name="loyal">Loyal</string>
    <string name="merlin">Merlin</string>
    <string name="minion">Minion</string>
    <string name="mordred">Mordred</string>
    <string name="morgana">Morgana</string>
    <string name="oberon">Oberon</string>
    <string name="percival">Percival</string>

    <string name="assignment_instructions">You are about to view your assignment in 2 frames. The first frame will show you your role, and the second frame will show you the other players that you know because of your role. PLEASE LOOK AT THE SCREEN IN SILENCE UNTIL ALL THE FRAMES ARE GONE</string>

    <string name="show_sensitive_data_on_touch">Press and hold to view your assignment.</string>
    <string name="client_default_status">No action required.</string>
    <string name="client_vote_for_proposal">Please vote for the following proposal.</string>
    <string name="client_vote_for_exec">Please pass or fail this quest.</string>

    <string name="server_proposal_required">Please select your proposed team.</string>
    <string name="server_lady_required">Please select the target for Lady.</string>
    <string name="server_assassin_required">Please select who you think is Merlin.</string>
    <string name="server_player_response_required">Waiting for player\'s responses.</string>

</resources>