<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_prompter"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/server_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"/>

        <Button
            android:id="@+id/client_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"/>

    </LinearLayout>

</LinearLayout>